SalesforceFiles/retrieveOutput/objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>AndroidIDHash__c</fullName>
        <label>AndroidIDHash</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App__c</fullName>
        <label>App</label>
        <referenceTo>App__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DataConnectionType__c</fullName>
        <label>DataConnectionType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <label>DataType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceCountry__c</fullName>
        <description>Country Code</description>
        <label>DeviceCountry</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceManufacturer__c</fullName>
        <label>DeviceManufacturer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceModel__c</fullName>
        <label>DeviceModel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceSerialHash__c</fullName>
        <label>DeviceSerialHash</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceType__c</fullName>
        <label>DeviceType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EpochTime__c</fullName>
        <label>EpochTime</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LanguageLocale__c</fullName>
        <label>LanguageLocale</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocaleCountryCode__c</fullName>
        <label>LocaleCountryCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalyticsApiKey__c</fullName>
        <label>LocalyticsApiKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalyticsLibraryVersion__c</fullName>
        <label>LocalyticsLibraryVersion</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkCarrier__c</fullName>
        <label>NetworkCarrier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetworkCountryCode__c</fullName>
        <label>NetworkCountryCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSVersion__c</fullName>
        <label>OSVersion</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersistentStorageCreationTimeSeconds__c</fullName>
        <label>PersistentStorageCreationTimeSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDKCompatibility__c</fullName>
        <label>SDKCompatibility</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionLengthSeconds__c</fullName>
        <label>SessionLengthSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SessionTime__c</fullName>
        <description>Time of session start as a datetime.</description>
        <label>SessionTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <label>UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AndroidIDHash__c</columns>
        <columns>DataConnectionType__c</columns>
        <columns>DeviceCountry__c</columns>
        <columns>DeviceManufacturer__c</columns>
        <columns>DeviceModel__c</columns>
        <columns>DeviceType__c</columns>
        <columns>EpochTime__c</columns>
        <columns>NetworkCarrier__c</columns>
        <columns>NetworkCountryCode__c</columns>
        <columns>SessionTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>